# RagsApp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  graph.py  main.py  pyproject.toml  requirements.txt
RagsApp-logo/: info.txt
agents/: README.md  negativenagesh.agent.md
api/: index.py
mcp_server/: auth.py  main.py  requirements.txt  tools.py
sdk/: response.py
services/ingestion_service/: Dockerfile  requirements.txt
services/ingestion_service/app/: es_client.py  index8jan.py  main.py  processor.py
services/ingestion_service/parsers/: __init__.py  doc_parser.py  docx_parser.py  img_parser.py  mistral_ocr_parser.py  ocr_parser.py  ocr_utils.py  odt_parser.py  pdf_parser.py  xlsx_parser.py
services/rag_service/app/: es_client.py  main.py  retrieval.py
services/whatsapp_gateway/: requirements.txt
services/whatsapp_gateway/app/: arecanut_price_tool.py  conversation_memory.py  ingestion_client.py  main.py  rag_client.py  retrieval_tool.py  supervisor.py  whatsapp_api.py
services/whatsapp_gateway/app/skills/: __init__.py  meme_generation_skill.py  news_search_skill.py  rag_skill.py
services/whatsapp_gateway/tests/: test_arecanut_price_tool.py  test_main_routing.py  test_meme_generation_skill.py  test_news_search_skill.py  test_retrieval_tool.py  test_supervisor.py
skills/: README.md
skills/arecanut-price/: SKILL.md
skills/arecanut-price/references/: code-map.md
skills/news-search/: SKILL.md
skills/news-search/references/: code-map.md
skills/rag/: SKILL.md
skills/rag/references/: code-map.md
