[project]
name = "ragsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "bson>=0.5.10",
    "ddgs>=9.12.0",
    "document>=1.0",
    "duckduckgo-search>=8.1.1",
    "elasticsearch>=9.3.0",
    "fastapi>=0.135.2",
    "fastmcp>=2.11.2",
    "filetype>=1.2.0",
    "google-genai>=1.69.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "mcp-cli>=0.6",
    "odfdo>=3.16.1",
    "odfpy>=1.4.1",
    "olefile>=0.47",
    "openai>=1.99.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "wikipedia>=1.4.0",
]
